Updated run_bench.cmd